--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./styles.css">
   <title>RPG Javascript</title>
 </head>
 <body>
-  
+  <div class="game-container">
+    <canvas class="game-canvas"></canvas>
+  </div>
+  <!-- Scripts -->
+  <script type="module" src="./Init.js"></script>
 </body>
 </html>
